[workspace]
members=["app/release-bot", "lib/gql-github", "lib/oapi-jira", "lib/rdbms"]
resolver="2"

[workspace.dependencies]

anyhow = { version = "1", features = ["backtrace"] }
clap={version="4", features = ["derive"]}
url = {version="^2.5", features=["serde"]}
uuid = { version = "^1.8", features = ["serde", "v4"] }

tokio={version="1", features=["full"]}

tokenizers = { version = "0.21.0", features = ["onig"] }
candle-core={ version="0.8.2", features=["cuda", "cudnn"]}
candle-datasets={version="0.8.2"}
candle-nn={version="0.8.2", features=["cuda"]}
candle-transformers={version="0.8.2", features=["cuda"]}
hf-hub = {version="0.4.1", features=["tokio"]}

reqwest = { version = "^0.12", features = ["json", "multipart"] }
graphql_client={ version = "^0.14", features = ["graphql_query_derive"] }

tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"

serde= { version = "1", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json="1"
serde_repr = "^0.1"

sqlx={version="^0.8", features = ["derive", "macros", "migrate", "uuid", "time", "ipnetwork", "json", "runtime-tokio", "tls-rustls", "postgres"] }

oapi-jira={path="lib/oapi-jira"}

gql-github={path="lib/gql-github"}
